--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "jupyterlab>=4.4.7",
     "matplotlib>=3.10.6",
     "pandas>=2.3.2",
+    "scipy>=1.16.2",
     "seaborn>=0.13.2",
 ]
