--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "jupyterlab>=4.4.7",
     "matplotlib>=3.10.6",
+    "nbconvert>=7.16.6",
     "pandas>=2.3.2",
     "scipy>=1.16.2",
     "seaborn>=0.13.2",
